<resources>
    <string name="app_name">パスワード管理</string>
    <string name="add">追加</string>
    <string name="category">カテゴリー</string>
    <string name="title">タイトル</string>
    <string name="save">保存</string>
    <string name="name">名称</string>
    <string name="pass">パスワード</string>
    <string name="edit">編集</string>
    <string name="delete">削除</string>
    <string name="confirm">削除しますか？</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
</resources>